# tap-clickcast

./: .flake8  .gitignore  CHANGELOG.md  README.md  config.json  meltano.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml  test-tap.yml
.meltano/: analytics.json  meltano.db
tap_clickcast/: auth.py  client.py  streams.py  tap.py
tap_clickcast/schemas/: employers.json
tap_clickcast/tests/: test_client.py  test_core.py
