[tool.poetry]
name = "tap-clickcast"
version = "0.0.1"
description = "`tap-clickcast` is a Singer tap for clickcast, built with the Meltano SDK for Singer Taps."
authors = ["Datateer"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.9,>=3.6.1"
requests = "^2.25.1"
singer-sdk = "^0.3.3"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-clickcast = 'tap_clickcast.tap:TapClickcast.cli'
